== Version 1.0.5 (in SVN)
* Applied [#11221] Autotest support does not work w/o Rails Gem installed (Patch from Josh Knowles)

== Version 1.0.4
The getting ready for JRuby release.

* Fixed [#11181] behaviour_type scoping of config.before(:each) is not working
* added mock argument constraint matchers (anything(), boolean(), an_instance_of(Type)) which work with rspec or mocha
* added mock argument constraint matchers (any_args(), no_args()) which only work with rspec
* deprecated rspec's symbol mock argument constraint matchers (:any_args, :no_args, :anything, :boolean, :numeric, :string)
* Added tarball of rspec_on_rails to the release build to support folks working behind a firewall that blocks svn access.
* Fixed [#11137] rspec incorrectly handles flash after resetting the session
* Fixed [#11143] Views code for ActionController::Base#render broke between 1.0.0 and 1.0.3 on Rails Edge r6731
* Added raise_controller_errors for controller examples in Spec::Rails

== Version 1.0.3
Bug fixes.

* Fixed [#11104] Website uses old specify notation
* Applied [#11101] StringHelpers.starts_with?(prefix) assumes a string parameter for _prefix_
* Removed 'rescue nil' which was hiding errors in controller examples.
* Fixed [#11075] controller specs fail when using mocha without integrated_views
* Fixed problem with redirect_to failing incorrectly against edge rails.
* Fixed [#11082] RspecResourceGenerator should be RspecScaffoldGenerator
* Fixed [#10959] Focused Examples do not work for Behaviour defined with constant with modules

== Version 1.0.2
This is just to align the version numbers in rspec and rspec_on_rails.

== Version 1.0.1
This is a maintenance release with mostly cleaning up, and one minor enhancement -
Modules are automatically included when described directly.

* Renamed Spec::Rails' rspec_resource generator to rspec_scaffold.