@@ -49,6 +49,8 @@ In alphabetical order (by last name)
 ** mock_model in Spec::Rails
 * Ola Bini
 ** Paired with Aslak to iron out minor JRuby issues.
+* Wincent Colaiuta
+** Patch [#11252] Should be able to re-load file containing shared behaviours without raising an exception
 * Bob Cotton
 ** Support for context_setup and context_teardown (now before(:all) and after(:all))
 ** Patch [#9678] Custom runner command line switch, and multi-threaded runner
