@@ -1,4 +1,7 @@
 == Version 1.0.5 (in SVN)
+
+* Applied [#11252] Should be able to re-load file containing shared behaviours without raising an exception (Patch from Wincent Colaiuta)
+* Fixed [#11247] standalone autotest doesn't work because of unneeded autotest.rb
 * Applied [#11221] Autotest support does not work w/o Rails Gem installed (Patch from Josh Knowles)
 
 == Version 1.0.4
